samples/_failures_safe/1761208211_ecc6d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc2902f5.c: In function ‘main’:
./samples/SAFE/__tmp_dc2902f5.c:146:9: error: expected declaration or statement at end of input
  146 |         input_text[len - 1] = '\0';
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_dc2902f5.c:146:9: error: expected declaration or statement at end of input
